--- a/ConfInicial/ConfInicial.vcxproj.filters
+++ b/ConfInicial/ConfInicial.vcxproj.filters
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Iluminacion.cpp">
-      <Filter>Archivos de origen\Shader</Filter>
+      <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
